scripts/nullness/original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8.txt
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/Miner.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: location
    public Miner() {
           ^
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/Miner.java:17: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<Miner>(this);
                  ^
  found   : @UnderInitialization(ch2.statemachine.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull Miner>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull Miner>
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/Miner.java:17: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<Miner>(this);
                                          ^
  found   : @UnderInitialization(ch2.statemachine.BaseGameEntity.class) @NonNull Miner
  required: @Initialized @NonNull Miner
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/StateMachine.java:9: error: [initialization.fields.uninitialized] the constructor does not initialize fields: current, previous, global
    public StateMachine(T owner) {
           ^
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/troll/Troll.java:4: error: [initialization.field.uninitialized] the default constructor does not initialize field state
    private State state;
                  ^
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/Miner.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: location
    public Miner() {
           ^
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/Miner.java:17: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<Miner>(this);
                  ^
  found   : @UnderInitialization(ch2.msg.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull Miner>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull Miner>
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/Miner.java:17: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<Miner>(this);
                                          ^
  found   : @UnderInitialization(ch2.msg.BaseGameEntity.class) @NonNull Miner
  required: @Initialized @NonNull Miner
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/StateMachine.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: current, previous, global
    public StateMachine(T owner) {
           ^
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/MinersWife.java:10: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<MinersWife>(this);
                  ^
  found   : @UnderInitialization(ch2.msg.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull MinersWife>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull MinersWife>
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/MinersWife.java:10: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<MinersWife>(this);
                                               ^
  found   : @UnderInitialization(ch2.msg.BaseGameEntity.class) @NonNull MinersWife
  required: @Initialized @NonNull MinersWife
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/EntityManager.java:20: error: [return] incompatible types in return.
        return entities.get(id);
                           ^
  type of expression: @Initialized @Nullable BaseGameEntity
  method return type: @Initialized @NonNull BaseGameEntity
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworld/Miner.java:8: error: [initialization.field.uninitialized] the default constructor does not initialize field location
    private Location location;
                     ^
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/Miner.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: location
    public Miner() {
           ^
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/Miner.java:17: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<Miner>(this);
                  ^
  found   : @UnderInitialization(ch2.westworldwithwoman.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull Miner>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull Miner>
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/Miner.java:17: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<Miner>(this);
                                          ^
  found   : @UnderInitialization(ch2.westworldwithwoman.BaseGameEntity.class) @NonNull Miner
  required: @Initialized @NonNull Miner
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/StateMachine.java:9: error: [initialization.fields.uninitialized] the constructor does not initialize fields: current, previous, global
    public StateMachine(T owner) {
           ^
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/MinersWife.java:9: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<MinersWife>(this);
                  ^
  found   : @UnderInitialization(ch2.westworldwithwoman.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull MinersWife>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull MinersWife>
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/MinersWife.java:9: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<MinersWife>(this);
                                               ^
  found   : @UnderInitialization(ch2.westworldwithwoman.BaseGameEntity.class) @NonNull MinersWife
  required: @Initialized @NonNull MinersWife
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
19 errors
